# RansomLook

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  dump.rdb  pyproject.toml  sharedutils.py
.ci/: Dockerfile  docker-compose.yml
.github/: codeQL.yml
.github/ISSUE_TEMPLATE/: new_feature_template.yml
.github/workflows/: Updating.yml  Updatingwebsite.yml  codeQL.yml  docker-image.yml  mypy.yml  pylint.yml  test-instance.yml
cache/: cache.conf  cache.pid  dump.rdb  run_redis.sh
config/: .generic.json.swp  generic.json.sample
data/: groups.json.sample  posts.json.sample
docs/: README.md  _sidebar.md  conf.py  index.html  index.rst  markets.md  profiles.md  recentposts.md  requirements.txt  stats.md  status.md
etc/nginx/sites-available/: ransomlook
etc/systemd/system/: ransomlook.service
ransomlook/: .ransomlook.py.swp  .twitter.py.swp  __init__.py  bluesky.py  email.py  exceptions.py  markdown.py  mastodon.py  misp.py  parsers.py  plotting.py  posts.py  ransomlook.py  ransomlook.py.old  rocket.py  sharedutils.py  telegram.py  twitter.py
ransomlook/default/: __init__.py  abstractmanager.py  config.py  exceptions.py
ransomlook/parsers/: .arvinclub.py.swp  .dark power.py.swp  .dispossessor.py.swp  .funksec.py.swp  .hunters.py.swp  .stormous.py.swp  0apt.py  0mega.py  3am.py  8base.py  abyss-data.py  akira.py  alphav.py  alphv.py  anubis.py  apos.py  arachna leak.py  arcus media.py  argonauts group.py  arvinclub.py  atomsilo.py  avoslocker.py  azzasec.py  babuk-bjorka.py  babuk-locker.py  babuk.py  beast.py  belsen group.py  benzona.py  bert.py  bianlian.py  black nevas.py  black suit.py  blackbasta.py  blackbyte.py  blackout.py  blackshrantac.py  blacktor.py  bluebox.py  bqtlock.py  (+193 more)
source/: dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=1  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=1.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=10.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=11.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=12.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=13.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=14.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=15.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=16.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=17.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=18.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=2  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=2.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=3.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=4.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=5.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=6.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=7.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=8.htm  dispossessor-e27z5kd2rjsern2gpgukhcioysqlfquxgf7rxpvcwepxl4lfc736piyd.onion-back-getallblogs-page=9.htm
tools/: 3rdparty.py  breach.py  generate_sri.py  getpreviousscreen.py  graphs.py  import_from_instance.py  import_groups.py  import_telegram.py  malpedia.py  stats.py  telegram.py  validate_config_files.py
website/web/: .genericapi.py.swp  __init__.py  forms.py  genericapi.py  helpers.py  ldap.py  sri.txt
website/web/api/: genericapi.py  leaksapi.py  rfapi.py  telegramapi.py
website/web/leak/: breachforums.txt
website/web/static/: datatables.min.css  datatables.min.js  generic-dark.css  generic.css
website/web/static/css/: main.css
website/web/static/js/: main.js
website/web/templates/: .search.html.swp  40x.html  500_generic.html  RF.html  RFdetails.html  about.html  actor.html  actors.html  add.html  addpost.html  addpostentry.html  admin.html  alerts.html  alive.html  base.html  bfleak.html  compare.html  crypto.html  cryptodetail.html  default.html  edit.html  editentry.html  editlogo.html  editpost.html  glossary.html  group.html  groups.html  hot.html  index.html  leak.html  leaks.html  login.html  logo.html  logs.html  notes.html  notesdetails.html  recent.html  rss.xml  search.html  stats.html  (+5 more)
website/web/templates/admin/: add.html  addactor.html  addpost.html  addpostentry.html  admin.html  admin_crypto.html  alerts.html  crypto.html  crypto_addr_form.html  crypto_aliases.html  crypto_group.html  crypto_group_new.html  edit.html  editactor.html  editactor_select.html  editentry.html  editlogo.html  editpost.html  logo.html  ransomnotes_group.html  ransomnotes_index.html
