[tool.poetry]
name = "ransomlook"
version = "1.8.0"
description = "Yet An Other Ransom Looker"
authors = ["Fafner KeyZee <fkz@p4nd4.land>"]

[tool.poetry.scripts]
scrape = "bin.scrape:main"
parse = "bin.parse:main"
screen = "bin.screen:main"
torrent = "bin.torrent:main"
markdown = "bin.markdown:main"
notify = "bin.notify:main"
notifyleak = "bin.notifyleak:main"
add = "bin.add:main"
start = "bin.start:main"
start_website = "bin.start_website:main"
stop = "bin.stop:main"
run_backend = "bin.run_backend:main"
shutdown = "bin.shutdown:main"
update = "bin.update:main"
telegram = "bin.telegram:main"
twitter = "bin.twitter:main"
cryptocur = "bin.cryptocur:main"
rf = "bin.rf:main"
notes = "bin.notes:main"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
tldextract = "^5.1.3"
lxml = "^5.3.0"
matplotlib = "^3.9.2"
playwright = "^1.48.0"
bs4 = "^0.0.2"
rocketchat-API = "^1.33.0"
Flask-Moment = "^1.0.6"
Bootstrap-Flask = "^2.4.1"
redis = "^5.2.0"
Flask = "^3.1.0"
gunicorn = "^23.0.0"
Flask-Login = "^0.6.3"
Werkzeug = "^3.1.3"
Flask-WTF = "^1.2.2"
tweepy = "^4.14.0"
Flask-Cors = "^5.0.0"
flask-restx = "^1.3.0"
googletrans-py = "^4.0.0"
types-requests = "^2.32.0.20241016"
types-beautifulsoup4 = "^4.12.0.20241020"
types-flask = "^1.1.6"
types-redis = "^4.6.0.20241004"
pymisp = "^2.5.2"
gitpython = "^3.1.43"
ldap3 = "^2.9.1"
types-ldap3 = "^2.9.13.20240205"
pandas = "^2.2.3"
plotly = "^5.24.1"
orca = "^1.8"
psutil = "^6.1.0"
kaleido = "0.2.1.post1"
types-pytz = "^2024.2.0.20241003"
pandas-stubs = "^2.2.3.241009"
types-flask-cors = "^5.0.0.20240902"
mastodon-py = "^1.8.1"
types-pillow = "^10.2.0.20240822"
libtorrent = "^2.0.9"
urllib3 = "^2.2.3"
playwright-stealth = "^1.0.6"
types-python-dateutil = "^2.9.0.20241003"
playwrightcapture = "^1.27.1"
lacuscore = "^1.12.3"
pylacus = "^1.12.0"

[tool.poetry.dev-dependencies]
mypy = "^1.13.0"
types-redis = "^4.6.0.20241004"
pylint = "^3.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
