[tool.poetry]
name = "ransomlook"
version = "1.9.0"
description = "Yet An Other Ransom Looker"
authors = ["Fafner KeyZee <fkz@p4nd4.land>"]

[tool.poetry.scripts]
scrape = "bin.scrape:main"
parse = "bin.parse:main"
screen = "bin.screen:main"
torrent = "bin.torrent:main"
markdown = "bin.markdown:main"
notify = "bin.notify:main"
notifyleak = "bin.notifyleak:main"
add = "bin.add:main"
start = "bin.start:main"
start_website = "bin.start_website:main"
stop = "bin.stop:main"
run_backend = "bin.run_backend:main"
shutdown = "bin.shutdown:main"
update = "bin.update:main"
telegram = "bin.telegram:main"
twitter = "bin.twitter:main"
cryptocur = "bin.cryptocur:main"
rf = "bin.rf:main"
notes = "bin.notes:main"

[tool.poetry.dependencies]
python = "^3.10"
tldextract = "^5.3.0"
lxml = "^5.4.0"
matplotlib = "^3.10.5"
playwright = "^1.54.0"
bs4 = "^0.0.2"
rocketchat-API = "^1.35.2"
Flask-Moment = "^1.0.6"
Bootstrap-Flask = "^2.5.0"
redis = "^5.3.1"
Flask = "^3.1.1"
gunicorn = "^23.0.0"
Flask-Login = "^0.6.3"
Werkzeug = "^3.1.3"
Flask-WTF = "^1.2.2"
tweepy = "^4.16.0"
Flask-Cors = "^6.0.1"
flask-restx = "^1.3.0"
googletrans-py = "^4.0.0"
types-requests = "^2.32.4.20250809"
types-beautifulsoup4 = "^4.12.0.20250516"
types-flask = "^1.1.6"
types-redis = "^4.6.0.20241004"
pymisp = "^2.5.17"
gitpython = "^3.1.45"
ldap3 = "^2.9.1"
types-ldap3 = "^2.9.13.20250622"
pandas = "^2.3.1"
plotly = "^6.3.0"
orca = "^1.8"
psutil = "^7.0.0"
kaleido = "1.0.0"
types-pytz = "^2025.2.0.20250809"
pandas-stubs = "^2.3.0.250703"
types-flask-cors = "^5.0.0.20250413"
mastodon-py = "^2.0.1"
types-pillow = "^10.2.0.20240822"
libtorrent = "^2.0.11"
urllib3 = "^2.5.0"
playwright-stealth = "^2.0.0"
types-python-dateutil = "^2.9.0.20250809"
playwrightcapture = "^1.31.7"
lacuscore = "^1.16.6"
pylacus = "^1.16.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
types-redis = "^4.6.0.20241004"
pylint = "^3.3.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
