[tool.poetry]
name = "ransomlook"
version = "2.0.0-dev"
description = "Yet An Other Ransom Looker"
authors = ["Fafner KeyZee <fkz@p4nd4.land>"]

[tool.poetry.scripts]
scrape = "bin.scrape:main"
parse = "bin.parse:main"
screen = "bin.screen:main"
torrent = "bin.torrent:main"
markdown = "bin.markdown:main"
notify = "bin.notify:main"
notifyleak = "bin.notifyleak:main"
add = "bin.add:main"
start = "bin.start:main"
start_website = "bin.start_website:main"
stop = "bin.stop:main"
run_backend = "bin.run_backend:main"
shutdown = "bin.shutdown:main"
update = "bin.update:main"
cryptocur = "bin.cryptocur:main"
rf = "bin.rf:main"
notes = "bin.notes:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Flask = "^3.1.2"
Flask-Login = "^0.6.3"
Flask-Moment = "^1.0.6"
Flask-WTF = "^1.2.2"
Bootstrap-Flask = "^2.5.0"
flask-restx = "^1.3.0"
redis = "^5.3.1"
# parsing / web
tldextract = "^5.3.0"
bs4 = "^0.0.2"
requests = "^2.32.0"
python-dateutil = "^2.9.0"
# social / integrations
mastodon-py = "^2.1.3"
rocketchat-API = "^1.37.0"
pymisp = "^2.5.17"
gitpython = "^3.1.45"
ldap3 = "^2.9.1"
# scraping / automation
playwright = "^1.55.0"
playwright-stealth = "^2.0.0"
lacuscore = "^1.17.4"
pylacus = "^1.17.1"
# imaging / misc
Pillow = "^11.3.0"
WTForms = "^3.1.0"
libtorrent = "^2.0.11"
Werkzeug = "^3.1.3"
gunicorn = "^23.0.0"


# --- Dépendances de développement ---
standard-imghdr = "^3.13.0"
[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
pylint = "^4.0.4"
ruff = "*"
deptry = "*"
pytest = "*"
pytest-cov = "*"
types-requests = "*"
types-beautifulsoup4 = "*"
types-flask = "*"
types-redis = "*"
types-ldap3 = "*"
types-pytz = "*"
types-flask-cors = "*"
types-pillow = "*"
types-python-dateutil = "*"

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
show_error_context = true
pretty = true
